# pra-Pydantic

./: .gitignore  README.md
src/: pyproject.toml
src/src/: main.py
