[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["yoxxxx <yyyy.xxxxx.xxx@xxx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
ruff = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
